--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ngneat/until-destroy": "^10.0.0",
     "@taiga-ui/addon-charts": "^3.74.0",
     "@taiga-ui/addon-mobile": "^3.74.0",
     "@taiga-ui/addon-preview": "^3.74.0",
@@ -32,6 +33,7 @@
     "@taiga-ui/layout": "^3.74.0",
     "@taiga-ui/styles": "^3.74.0",
     "@tinkoff/ng-dompurify": "4.0.0",
+    "@tinkoff/ng-polymorpheus": "^4.3.0",
     "dompurify": "3.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
